TEST_PROGRAMS/INVALID/05/empty_var_dec.go
/* Empty var declaration. */

package main

var // Error: Can't have an empty var.

func main() {
	// Do nothing
}
